--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,22 +12,36 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MedicalApplication_PaisjeMobile"
         tools:targetApi="31">
+
+
         <activity
             android:name=".LogInActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".SignUpActivity"
             android:exported="false" />
+
         <activity
             android:name=".MainActivity"
-            android:exported="false">
-        </activity>
-    </application>
+            android:exported="false" />
 
+        <activity
+            android:name=".HomeActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".UpcomingAppointmentActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".TakeMedicationActivity"
+            android:exported="false" />
+
+    </application>
 </manifest>
